syntax = "proto3";
option cc_enable_arenas = true;

package NKikimr.NBackup;

message TExportEncryptedFileHeader {
    uint64 Version = 1;             // 1 for now
    bytes IV = 2;                   // Initialization vector. The length must suit requirements of encryption algorithm
    string EncryptionAlgorithm = 3; // Encryption algorithm
}
